--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -21,4 +21,7 @@
     <string name="submit">Submit</string>
     <string name="invalid_phone">Please enter a valid phone number.</string>
     <string name="invalid_auth_code">Verification failed. Please ensure the veriifcation code is correct and try again.</string>
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="title_activity_add_location_map">AddLocationMapActivity</string>
 </resources>
